objects/ACE_Notification_PriceChanges__c.object
<CustomObject>
    <description>Price Change Process UI</description>
    <fields>
        <fullName>Notification_Date_Email__c</fullName>
        <formula>IF(ISNULL(Notification_Date__c),&apos;N/A&apos;,TEXT(MONTH(Notification_Date__c))+&quot;/&quot; +TEXT(DAY(Notification_Date__c))+&quot;/&quot; +TEXT(YEAR(Notification_Date__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Notification Date Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notification_Date__c</fullName>
        <label>Notification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rep_First_Name__c</fullName>
        <formula>User__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rep First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <formula>$Setup.ACE_Settings__c.Tab_Url__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserEmail__c</fullName>
        <description>This is the SFDC User Email address for which Notification will be sent upon the Record Creation.</description>
        <label>UserEmail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ACE_Notification_PriceChanges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>batchId__c</fullName>
        <label>batchId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>ACE_Notification_PriceChanges</label>
    <nameField>
        <label>ACE_Notification_PriceChanges Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ACE_Notification_PriceChanges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>